# ai-crm-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml
agent/: __init__.py  email_sender.py  email_writer.py  segmentation.py  storage.py  tracer.py
dashboard/: app.py
data/: contacts.csv  generate_contacts.py
tests/: conftest.py  test_segmentation.py  test_storage.py  test_tracer.py
