[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-crm-agent"
version = "0.2.0"
description = "AI-powered contact segmentation and personalised email automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.20.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
crm-agent = "cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["agent", "dashboard", "data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
